# zeroclaw

./: .gitignore  Cargo.toml
api/search.index/: 002beb26e5.js  002db4c6ee.js  004bd8b992.js  0069a7ee5b.js  006eb53b04.js  00ba79e084.js  00d70f8725.js  00e9e72cde.js  00f6657973.js  012dc96d3b.js  013d55e726.js  014771a623.js  0150646d4d.js  01595aa10c.js  0165290e9d.js  01715653a3.js  0184ba33d8.js  01d1820c15.js  020f1c2c53.js  025445dd75.js  027371a886.js  028012e9ba.js  0291160be2.js  029fd02780.js  02e80bc539.js  02eaeb9550.js  02f438b4d1.js  02fa419779.js  030ef7428d.js  031805c510.js  033a33c616.js  035e9c960b.js  036b91829d.js  039d3dc0a4.js  03a932f870.js  03b6efa894.js  03c3fd6a8b.js  03c91229ea.js  03cdb3a193.js  03da4c6192.js  (+1036 more)
crates/zeroclaw-infra/: Cargo.toml
crates/zeroclaw-plugins/: Cargo.toml  build.rs
master/api/: src-files.js
master/en/: 404.html  api.html  index.html  introduction.html  philosophy.html  print.html  searcher-c2a407aa.js
master/es/: 404.html  api.html  index.html  introduction.html  philosophy.html  print.html  searcher-c2a407aa.js
master/fr/: 404.html  api.html  index.html  introduction.html  philosophy.html  print.html  searcher-c2a407aa.js
plugins/channels/microsoft-teams/: Cargo.toml  credentials.toml.example  manifest.toml.example
plugins/channels/microsoft-teams/src/: approval.rs  credentials.rs  graph.rs  lib.rs  mentions.rs  poll_gate.rs  state.rs
plugins/channels/microsoft-teams/teams-app-manifest/: ICONS.md  SETUP.md  manifest.json
plugins/channels/microsoft-teams/tests/: spike_teams_channel.rs
(+16512 files in other folders)
